--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,14 @@
     --bg: linear-gradient(#37E0E0, #40FF53);
 }
 
+/*FONTS*/
+@font-face {
+    font-family: Mario;
+    src: url('../font/CHLORINP.TTF');
+}
+
 html {
     height: 100vh;
     background: var(--bg);
+    font-family: Mario;
 }
