--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,7 @@
 /*FONTS*/
 @font-face {
     font-family: Mario;
-    src: url('../font/CHLORINP.TTF');
+    src: url('../font/SuperMario256.ttf');
 }
 
 html {
