--- a/css/style.css
+++ b/css/style.css
@@ -7,43 +7,34 @@ body{
 }
 
 h1{
-    font-size: 3rem;
-}
-
-hr {
-    max-width: 50rem;
-    height: 0.5rem;
-    border-radius: 10rem;
-    background-color: black;
+    font-size: 5rem;
+    margin-bottom: 5rem;
 }
 
 #board {
-    width: 450px;
-    height: 450px;
-    /*
-    max-width: 450px;
-    max-height: 450px;
-     */
+    max-width: 45rem;
+    max-height: 45rem;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
 
 .tile {
-    width: 147px;
-    height: 147px;
+    width: 14rem;
+    height: 14rem;
 
-    /* Text */
-    font-size: 150px;
+    font-size: 12rem;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    cursor: pointer;
 }
 
 .horizontal-line {
-    border-bottom: 3px solid black;
+    border-bottom: 0.3rem solid black;
 }
 
 .vertical-line {
-    border-right: 3px solid black;
+    border-right: 0.3rem solid black;
 }
