--- a/css/common.css
+++ b/css/common.css
@@ -13,3 +13,9 @@ html {
     background: var(--bg);
     font-family: Mario;
 }
+p {
+    font-size: 2rem;
+    -webkit-text-stroke: 1.5px black;
+    padding: 0;
+    margin: 0;
+}
