--- a/css/common.css
+++ b/css/common.css
@@ -19,3 +19,14 @@ p {
     padding: 0;
     margin: 0;
 }
+
+button {
+    text-decoration: none;
+    border: none;
+    background: rgba(255,255,255,0.6);
+    border-radius: 8px;
+    padding: .5rem 1.5rem;
+}
+button:hover {
+    cursor: pointer;
+}
