--- a/css/game.css
+++ b/css/game.css
@@ -34,6 +34,15 @@ img {
 #buttons {
     text-align: center;
 }
+
+#board {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.squares {
+    width: 9rem;
+    height: 9rem;
+}
 /*
 #resetButton {
     
