--- a/css/game.css
+++ b/css/game.css
@@ -3,22 +3,17 @@ html {
 }
 
 h1{
-    font-size: 5rem;
+    font-size: 4rem;
     margin-bottom: 5rem;
+    text-align: center;
 }
 .header {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     align-items: center;
 }
-body{
-    text-align: center;
-}
 .icons {
     width: 5em;
-}
-h1 {
-    text-align: center;
 }
 img {
     margin: auto;
@@ -26,17 +21,17 @@ img {
 #board {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    max-width: 90vw;
+    width: 90vw;
+    height: 90vw;
+    margin: 2rem auto;
 }
 .tile {
-    min-width: 14rem;
-    min-height: 14rem;
-
-    font-size: 12rem;
+    width: 100%;
+    height: 100%;
+    font-size: 8rem;
     display: flex;
     justify-content: center;
     align-items: center;
-
     cursor: pointer;
 }
 .horizontal-line {
@@ -78,3 +73,10 @@ img {
 
 }
 */
+@media (min-width: 75em) {
+    #board {
+        width: 75vh;
+        height: 75vh;
+    }
+    
+}
