--- a/css/game.css
+++ b/css/game.css
@@ -3,7 +3,6 @@ html {
 }
 
 h1{
-    display: block;
     font-size: 4rem;
     margin-bottom: 5rem;
     margin: auto 0;
@@ -27,11 +26,19 @@ img {
     width: 90vw;
     height: 90vw;
     margin: 2rem auto;
+    gap: 2rem;
+}
+.games {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    height: 100%;
+    margin: 2rem auto;
 }
 .tile {
     width: 100%;
     height: 100%;
-    font-size: 8rem;
+    font-size: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,7 +47,6 @@ img {
 .horizontal-line {
     border-bottom: 0.3rem solid black;
 }
-
 .vertical-line {
     border-right: 0.3rem solid black;
 }
@@ -51,7 +57,6 @@ img {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
-    
 }
 #score > p {
     margin: .5rem .5rem;
@@ -67,6 +72,7 @@ img {
     text-align: center;
 }
 
+/*
 #resetButton {
     background: url('../svg/Reset.svg') no-repeat center;
     background-size: 100%;
@@ -75,6 +81,7 @@ img {
 #menuButton {
 
 }
+*/
 
 @media (min-width: 75em) {
     #board {
