--- a/css/common.css
+++ b/css/common.css
@@ -24,7 +24,7 @@ button {
     text-decoration: none;
     border: none;
     background: rgba(255,255,255,0.6);
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     padding: .5rem 1.5rem;
 }
 button:hover {
