--- a/css/game.css
+++ b/css/game.css
@@ -1,5 +1,7 @@
 html {
     font-size: 62.5%;
+
+    background-color: #40FF53;
 }
 
 h1{
@@ -27,17 +29,19 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 90vw;
-    height: 90vw;
+    height: 100%;
     margin: 2rem auto;
     gap: 2rem;
     padding-bottom: 6rem;
+
+    overflow: auto;
 }
 .games {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     height: 100%;
-    margin: 2rem auto;
+    margin: auto;
 }
 .tile {
     width: 100%;
@@ -50,14 +54,6 @@ main {
     align-items: center;
     cursor: pointer;
 }
-
-.value{
-    color: rgba(0, 0, 0, 0);
-}
-.valueShow{
-    color: rgba(0, 0, 0, 1);
-}
-
 
 .horizontal-line {
     border-bottom: 0.3rem solid black;
@@ -89,7 +85,8 @@ main {
     width: fit-content;
     display: flex;
     gap: 2rem;
-    margin: 0 auto;
+
+    margin: 2rem auto;
 }
 #buttons div {
     background-color:  rgba(255,255,255,0.6);
