--- a/css/home.css
+++ b/css/home.css
@@ -70,6 +70,11 @@ a img{
     margin-top: -3em;
 }
 
+@media (min-width: 46.875em) {
+    figure img:nth-child(1){
+        display: none;
+    }
+}
 
 
 
