--- a/css/common.css
+++ b/css/common.css
@@ -15,6 +15,7 @@ html {
 
 p {
     font-size: 2rem;
+    font-family: 'Mario';
     -webkit-text-stroke: 1.5px black;
     padding: 0;
     margin: 0;
