--- a/css/home.css
+++ b/css/home.css
@@ -30,39 +30,6 @@ figure img:nth-child(3){
     display: none;
 }
 
-/*
-figure img:nth-child(1){
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5em;
-    max-width: 70%;
-}
-
-figure img:nth-child(2){
-    display: none
-}
-
-figure img:nth-child(3){
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 6em;
-    z-index: -1;
-}
-
-.foto img:first-child{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 1;
-    margin-top: -19em;
-}
-
-.foto img:nth-child(2){
-    display: none;
-}
-*/
 a img{
     background: rgba(255, 255, 255, 0.72);
     background-blend-mode: lighten;
@@ -110,7 +77,7 @@ a img{
     margin-top: -3em;
 }
 
-@media (min-width: 46.875em) {
+@media (min-width: 85em) {
     figure img:nth-child(1){
         display: none;
     }
@@ -127,41 +94,26 @@ a img{
         display: none;
     }
 
-    .figures:nth-child(1){
+    .figures{
+        display: flex;
+        justify-content: space-between;
+        margin-top: -4rem;
+        gap: 45rem;
+    }
+
+    .figures img:nth-child(1){
         margin: auto 0 auto 0;
-        width: 20%;
-    }
-
-    .figures:nth-child(2){
-        margin: auto 0 auto auto;
-        width: 20%;
-        display: block;
-    }
-
-    /*
-    .foto img:first-child{
-        display: block;
-        margin-left: 1em;
-        margin-top: 7em;
         min-width: 20%;
     }
 
-    .foto img:nth-child(2){
+    .figures img:nth-child(2){
         display: block;
-        margin-left: 40em;
     }
 
-    .foto{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        z-index: 1;
-    }
-    */
     #buttons{
         text-align: center;
         width: fit-content;
-        margin: 0 auto;
+        margin: -22rem auto 0 auto;
         display: block;
     }
 }
