--- a/css/game.css
+++ b/css/game.css
@@ -209,6 +209,21 @@ img {
 .modal-content p::after {
     content: '🏆';
 }
+.bounce-in-right {
+    animation: bounce-in-right 2s ease;
+}
+@keyframes bounce-in-right {
+    0% {
+        opacity: 0;
+        transform: translateX(2000px);
+    }
+    60% {
+        opacity: 1;
+        transform: translateX(-30px);
+    }
+    80% { transform: translateX(10px); }
+    100% { transform: translateX(0); }
+}
 /* The Close Button */
 .close1, .close2{
     color: #aaaaaa;
